--- a/index.html
+++ b/index.html
@@ -243,7 +243,7 @@
               <p>A collaborative task management application with real-time updates and team collaboration features.</p>
   
               <div class="project-links">
-                <a href="task-management-9pjm.vercel.app" class="project-link">
+                <a href="https://task-management-9pjm.vercel.app" class="project-link">
                   <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                     <path d="M18 13v6a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2V8a2 2 0 0 1 2-2h6"></path>
                     <polyline points="15 3 21 3 21 9"></polyline>
