--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <span class="name">Aniagboso Michael</span>
             </h1>
             <p class="animate-fade-in delay-400">A passionate web developer crafting elegant digital experiences</p>
-            <a href="./myCV.pdf" class="btn animate-fade-in delay-800">Download My CV</a>
+             <a href="./myCV.pdf" class="btn animate-fade-in delay-800">Download My CV</a>
           </div>
           
           <div class="profile-container animate-fade-in delay-300">
@@ -111,6 +111,9 @@
             <p>
               When I'm not coding, you can find me exploring new hiking trails, playing football, or
               diving into a good book.
+            </p>
+            <p>
+             
             </p>
           </div>
         </div>
@@ -324,7 +327,7 @@
               </svg>
               <span>Lagos, Nigeria</span>
             </div>
-            <a href="mailto:your.email@example.com" class="contact-item">
+            <a href="mailto:michaelaniagboso637@gmail.com" class="contact-item">
               <svg xmlns="http://www.w3.org/2000/svg" width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round">
                 <path d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"></path>
                 <polyline points="22,6 12,13 2,6"></polyline>
