--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
               <span class="name">Aniagboso Michael</span>
             </h1>
             <p class="animate-fade-in delay-400">A passionate web developer crafting elegant digital experiences</p>
-             <a href="./myCV.pdf" class="btn animate-fade-in delay-800">Download My CV</a>
+             <a href="https://cv-rouge-alpha.vercel.app" class="btn animate-fade-in delay-800">View My CV</a>
           </div>
           
           <div class="profile-container animate-fade-in delay-300">
